@@ -255,23 +255,23 @@ pic16_decodeOp (unsigned int op)
                 case CRITICAL:          return "CRITICAL";
                 case NONBANKED:         return "NONBANKED";
                 case BANKED:            return "BANKED";
-                case CHAR:              return "CHAR";
-                case SHORT:             return "SHORT";
-                case INT:               return "INT";
-                case LONG:              return "LONG";
+                case SD_CHAR:           return "CHAR";
+                case SD_SHORT:          return "SHORT";
+                case SD_INT:            return "INT";
+                case SD_LONG:           return "LONG";
                 case SIGNED:            return "SIGNED";
                 case UNSIGNED:          return "UNSIGNED";
-                case FLOAT:             return "FLOAT";
+                case SD_FLOAT:          return "FLOAT";
                 case DOUBLE:            return "DOUBLE";
-                case CONST:             return "CONST";
+                case SD_CONST:          return "CONST";
                 case VOLATILE:          return "VOLATILE";
-                case VOID:              return "VOID";
+                case SD_VOID:           return "VOID";
                 case BIT:               return "BIT";
                 case STRUCT:            return "STRUCT";
                 case UNION:             return "UNION";
                 case ENUM:              return "ENUM";
                 case RANGE:             return "RANGE";
-                case FAR:               return "FAR";
+                case SD_FAR:            return "FAR";
                 case CASE:              return "CASE";
                 case DEFAULT:           return "DEFAULT";
                 case IF:                return "IF";
